--- a/1.2/Source/ReGrowthCore/ReGrowthCore.csproj
+++ b/1.2/Source/ReGrowthCore/ReGrowthCore.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="WeatherOverlays\WeatherOverlay_Blizzard.cs" />
+    <Compile Include="WeatherOverlays\WeatherOverlay_Sandstorm - Copy.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Sandstorm.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Monsoon.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_DrizzleRain.cs" />
