--- a/1.2/Source/ReGrowthCore/ReGrowthCore.csproj
+++ b/1.2/Source/ReGrowthCore/ReGrowthCore.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HarmonyPatches\WeatherOverlay_Sandstorm - Copy.cs" />
+    <Compile Include="Comps\WeatherOverlay_Sandstorm.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Blizzard.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Overcast.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Sandstorm.cs" />
@@ -51,6 +53,9 @@
   <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref">
       <Version>1.2.2753</Version>
+    </PackageReference>
+    <PackageReference Include="Lib.Harmony">
+      <Version>2.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
