--- a/1.2/Source/ReGrowthCore/ReGrowthCore.csproj
+++ b/1.2/Source/ReGrowthCore/ReGrowthCore.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="HarmonyPatches\GetFallColorFactor_Patch.cs" />
     <Compile Include="Comps\CompTreeLeavesSpawner.cs" />
+    <Compile Include="ReGrowthMod.cs" />
+    <Compile Include="ReGrowthSettings.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Blizzard.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Overcast.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Monsoon.cs" />
