--- a/1.2/Source/ReGrowthCore/ReGrowthCore.csproj
+++ b/1.2/Source/ReGrowthCore/ReGrowthCore.csproj
@@ -31,6 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony">
+      <HintPath>..\..\..\..\AlienRaces\1.1\Assemblies\0Harmony.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,12 +46,42 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine">
+      <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActiveTerrain\ActiveTerrainUtility.cs" />
+    <Compile Include="ActiveTerrain\Comps\TerrainCompBase.cs" />
+    <Compile Include="ActiveTerrain\Comps\TerrainCompProperties.cs" />
+    <Compile Include="ActiveTerrain\Comps\TerrainComps_Power.cs" />
+    <Compile Include="ActiveTerrain\Comps\TerrainComp_Glower.cs" />
+    <Compile Include="ActiveTerrain\Comps\TerrainComp_HeatPush.cs" />
+    <Compile Include="ActiveTerrain\Comps\TerrainComp_SelfClean.cs" />
+    <Compile Include="ActiveTerrain\Comps\TerrainComp_ShaderSlowDown.cs" />
+    <Compile Include="ActiveTerrain\Comps\TerrainComp_TempControl.cs" />
+    <Compile Include="ActiveTerrain\DefExtensionActive.cs" />
+    <Compile Include="ActiveTerrain\Patches.cs" />
+    <Compile Include="ActiveTerrain\SpecialTerrain.cs" />
+    <Compile Include="ActiveTerrain\SpecialTerrainList.cs" />
+    <Compile Include="ActiveTerrain\ThingComps.cs" />
+    <Compile Include="HarmonyPatches\CleanFilthPrefixPatch.cs" />
+    <Compile Include="HarmonyPatches\DoCellSteadyEffects.cs" />
     <Compile Include="HarmonyPatches\GetFallColorFactor_Patch.cs" />
     <Compile Include="Comps\CompTreeLeavesSpawner.cs" />
+    <Compile Include="HarmonyPatches\TickOverlay.cs" />
+    <Compile Include="HarmonyPatches\TryPickupFilth.cs" />
+    <Compile Include="MapExtender\MapComponentExtender.cs" />
+    <Compile Include="MapExtender\ObjectSpawnsDef.cs" />
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="ReGrowthMod.cs" />
     <Compile Include="ReGrowthSettings.cs" />
+    <Compile Include="RGDefOf.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Blizzard.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Overcast.cs" />
     <Compile Include="WeatherOverlays\WeatherOverlay_Monsoon.cs" />
@@ -58,6 +95,15 @@
     <PackageReference Include="Lib.Harmony">
       <Version>2.0.2</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include=".vs\ReGrowthCore\v16\Server\sqlite3\db.lock" />
+    <None Include=".vs\ReGrowthCore\v16\Server\sqlite3\storage.ide" />
+    <None Include="obj\project.assets.json" />
+    <None Include="obj\project.nuget.cache" />
+    <None Include="obj\ReGrowthCore.csproj.nuget.dgspec.json" />
+    <None Include="obj\ReGrowthCore.csproj.nuget.g.props" />
+    <None Include="obj\ReGrowthCore.csproj.nuget.g.targets" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
