--- a/1.2/Source/ReGrowthCore/ReGrowthCore.csproj
+++ b/1.2/Source/ReGrowthCore/ReGrowthCore.csproj
@@ -31,13 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>..\..\..\..\AlienRaces\1.1\Assemblies\0Harmony.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,14 +39,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActiveTerrain\ActiveTerrainUtility.cs" />
@@ -61,21 +46,17 @@
     <Compile Include="ActiveTerrain\Comps\TerrainCompProperties.cs" />
     <Compile Include="ActiveTerrain\Comps\TerrainComps_Power.cs" />
     <Compile Include="ActiveTerrain\Comps\TerrainComp_Glower.cs" />
+    <Compile Include="ActiveTerrain\Comps\TerrainComp_MoteSpawner.cs" />
     <Compile Include="ActiveTerrain\Comps\TerrainComp_HeatPush.cs" />
     <Compile Include="ActiveTerrain\Comps\TerrainComp_SelfClean.cs" />
-    <Compile Include="ActiveTerrain\Comps\TerrainComp_ShaderSlowDown.cs" />
     <Compile Include="ActiveTerrain\Comps\TerrainComp_TempControl.cs" />
     <Compile Include="ActiveTerrain\DefExtensionActive.cs" />
     <Compile Include="ActiveTerrain\Patches.cs" />
     <Compile Include="ActiveTerrain\SpecialTerrain.cs" />
     <Compile Include="ActiveTerrain\SpecialTerrainList.cs" />
     <Compile Include="ActiveTerrain\ThingComps.cs" />
-    <Compile Include="HarmonyPatches\CleanFilthPrefixPatch.cs" />
-    <Compile Include="HarmonyPatches\DoCellSteadyEffects.cs" />
     <Compile Include="HarmonyPatches\GetFallColorFactor_Patch.cs" />
     <Compile Include="Comps\CompTreeLeavesSpawner.cs" />
-    <Compile Include="HarmonyPatches\TickOverlay.cs" />
-    <Compile Include="HarmonyPatches\TryPickupFilth.cs" />
     <Compile Include="MapExtender\MapComponentExtender.cs" />
     <Compile Include="MapExtender\ObjectSpawnsDef.cs" />
     <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
